# MMIRAGE

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml  run.sh
.github/workflows/: docker.yml
configs/: config_benchmark_datatrove.yaml  config_comprehensive.yaml  config_mock.yaml  config_mock_openai_batch.yaml  config_mock_openai_batch_vision.yaml  config_mock_vision.yaml  medtrinity_demo_16nodes.yaml  medtrinity_demo_local.yaml
docker/: Dockerfile  Dockerfile.cpu
scripts/: compare_datasets.py  download_medtrinity_demo.py  generate_env.sh  verify_medtrinity_demo.py
src/mmirage/: __init__.py  cli.py  merge_shards.py  shard_process.py  shard_utils.py
src/mmirage/cli_utils/: __init__.py  runtime.py  slurm.py  status.py
src/mmirage/config/: __init__.py  batch_provider.py  config.py  loading.py  openai_batch.py  utils.py
src/mmirage/core/loader/: __init__.py  base.py  jsonl.py  local_hf.py  utils.py
src/mmirage/core/process/: __init__.py  base.py  mapper.py  variables.py
src/mmirage/core/process/batch/: __init__.py  adapter.py  chunking.py  collector.py  metadata_paths.py  metadata_utils.py  openai_adapter.py  orchestrator.py  provider_resolution.py  registry.py  (+1 more)
src/mmirage/core/writer/: renderer.py
tests/: test_batch_adapter_contracts.py  test_batch_chunking.py  test_batch_collector.py  test_batch_orchestrator.py  test_batch_status_checker.py  test_integration_batch_pipeline.py  test_integration_receiver.py  test_mock_vision.sh  test_openai_batch_adapter.py
tests/mock_data/: data.jsonl
tests/mock_data_vision/: data.jsonl
(+7 files in other folders)
