[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "mmirage"
version = "0.1.4"
description = "Modular Multimodal Intelligent Reformatting and Augmentation Generation Engine - Advanced platform for processing datasets using generative models including vision-language models."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Meditron team" }]

# Core runtime deps for your scripts
dependencies = [
  "sglang>=0.5.2",
  "transformers>=4.46.0",
  "pyzmq",
  "uvloop<0.22; platform_system != 'Windows'",
  "fastapi",
  "openai>=1.0.0",
  "partial_json_parser",
  "sentencepiece",
  "sgl_kernel",
  "compressed_tensors",
  "msgspec",
  "nest_asyncio",
  "xgrammar",
  "PyYAML",
  "json-repair",
  "tqdm",
  "datasets>=3.0.0",
  "pyarrow>=12",
  "huggingface_hub>=0.24",
  "numpy",
  "fsspec",
  "dacite>=1.6.0",
  "pydantic>=2.12",
  "jmespath",
  "jinja2>=3.0.0",
  "pillow>=9.0.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5.0",
  "black>=24.3.0",
  "mypy>=1.8.0",
  "ipykernel",
  "pytest",
]

[project.scripts]
mmirage = "mmirage.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mmirage"]

[tool.hatch.build.targets.sdist]
include = ["src/mmirage/**", "pyproject.toml", "README.md"]
